--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piškvorky</title>
+    <link rel="stylesheet" href="styly.css" />
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <main>
+      <h1>Piškvorky</h1>
+      <p>
+        Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se
+        hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou
+        aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+        čtverečkovaný papír. Přejeme vám hodně zábavy!
+      </p>
+      <button>Pravidla</button>
+      <button>Začít hrát</button>
+    </main>
   </body>
 </html>
