pozadí stránky a základní styly pro kartu a obrázek

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="styly.css" />
   </head>
   <body>
-    <main>
+    <main class="card">
+      <img
+        class="card__image"
+        src="uvodni.jpg"
+        alt="úvodní obrázek čtyřlístků ve čtvercové mřížce"
+      />
       <h1>Piškvorky</h1>
       <p>
         Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se
