--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piškvorky</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styly.css" />
   </head>
   <body>
@@ -20,8 +24,8 @@
         aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
         čtverečkovaný papír. Přejeme vám hodně zábavy!
       </p>
-      <button>Pravidla</button>
-      <button>Začít hrát</button>
+      <button class="card__buttons card__button-rules">Pravidla</button>
+      <button class="card__buttons card__button-start">Začít hrát</button>
     </main>
   </body>
 </html>
