další nastylování prostředního infobloku a description

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         src="uvodni.jpg"
         alt="úvodní obrázek čtyřlístků ve čtvercové mřížce"
       />
-      <h1>Piškvorky</h1>
-      <p>
-        Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se
-        hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou
-        aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
-        čtverečkovaný papír. Přejeme vám hodně zábavy!
-      </p>
+      <div class="card__infoblock">
+        <h1>Piškvorky</h1>
+        <div class="card__description">
+          <p>
+            Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+            se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+            skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+            čtverečkovaný papír. Přejeme vám hodně zábavy!
+          </p>
+        </div>
+      </div>
       <button class="card__buttons card__button-rules">Pravidla</button>
       <button class="card__buttons card__button-start">Začít hrát</button>
     </main>
