--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
           </p>
         </div>
       </div>
-      <button class="card__buttons card__button-rules">Pravidla</button>
+      <button class="card__buttons card__button-rules">
+        <a
+          href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+          class="button__link"
+          >Pravidla</a
+        >
+      </button>
       <button class="card__buttons card__button-start">Začít hrát</button>
     </main>
   </body>
