oprava tlačítka start

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           >Pravidla</a
         >
       </button>
-      <button class="card__buttons card__button-start">Začít hrát</button>
+      <button class="card__buttons card__button-start">
+        <a href="index.html" class="button__link">Začít hrát</a>
+      </button>
     </main>
   </body>
 </html>
