reorganizace složek, přidání obrázků a základního html pro hru

--- a/uvod/index.html
+++ b/uvod/index.html
@@ -14,7 +14,7 @@
     <main class="card">
       <img
         class="card__image"
-        src="uvodni.jpg"
+        src="obrazky/uvodni.jpg"
         alt="úvodní obrázek čtyřlístků ve čtvercové mřížce"
       />
       <div class="card__infoblock">
