přesun index.html zpět do root

--- a/hra/hra.html
+++ b/hra/hra.html
@@ -10,5 +10,7 @@
     />
     <link rel="stylesheet" href="styly.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Piškvorky</h1>
+  </body>
 </html>
