--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styly.css" />
+    <link rel="stylesheet" href="uvod/styly.css" />
   </head>
   <body>
     <main class="card">
