odkaz Začít hrát - propojení s hra.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         >
       </button>
       <button class="card__buttons card__button-start">
-        <a href="index.html" class="button__link">Začít hrát</a>
+        <a href="hra/hra.html" class="button__link">Začít hrát</a>
       </button>
     </main>
   </body>
