příprava bloku s informacemi o aktuálními hráči a tlačítky domů a restart

--- a/hra/hra.html
+++ b/hra/hra.html
@@ -11,6 +11,20 @@
     <link rel="stylesheet" href="styly.css" />
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <main>
+      <h1>Piškvorky</h1>
+      <div class="playing__container">
+        <p class="playing__player">HRAJE:</p>
+
+        <div class="playing__controls">
+          <a class="button__link playing__controls--home" href="../index.html">
+            <img src="../obrazky/home.svg" alt="domů" />
+          </a>
+          <a class="button__link playing__controls--restart" href="hra.html">
+            <img src="../obrazky/restart.svg" alt="restart hry" />
+          </a>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
