přidání nastylovaného herního pole, dostylování elementů v řádku nad polem

--- a/hra/hra.html
+++ b/hra/hra.html
@@ -13,8 +13,11 @@
   <body>
     <main>
       <h1>Piškvorky</h1>
-      <div class="playing__container">
-        <p class="playing__player">HRAJE:</p>
+      <div class="playing">
+        <p class="playing__player">
+          <span class="playing__player--text">hraje:</span>
+          <img src="../obrazky/circle.svg" alt="kolečko" />
+        </p>
 
         <div class="playing__controls">
           <a class="button__link playing__controls--home" href="../index.html">
@@ -24,7 +27,111 @@
             <img src="../obrazky/restart.svg" alt="restart hry" />
           </a>
         </div>
+        <!--koncový div .playing-->
       </div>
+      <!--koncový div .playing__controls-->
+      <section class="playing-board">
+        <button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
+        ><button class="playing-board__button"></button>
+      </section>
     </main>
   </body>
 </html>
