--- a/hra/hra.html
+++ b/hra/hra.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styly.css" />
+    <script src="hra.js" type="module"></script>
   </head>
   <body>
     <main>
