--- a/hra/hra.html
+++ b/hra/hra.html
@@ -32,8 +32,12 @@
       </div>
       <!--koncový div .playing__controls-->
       <section class="playing-board">
-        <button class="playing-board__button"></button
-        ><button class="playing-board__button"></button
+        <button
+          class="playing-board__button playing-board__button--cross btn-1"
+        ></button
+        ><button
+          class="playing-board__button playing-board__button--circle btn-2"
+        ></button
         ><button class="playing-board__button"></button
         ><button class="playing-board__button"></button
         ><button class="playing-board__button"></button
