--- a/hra/hra.html
+++ b/hra/hra.html
@@ -17,7 +17,11 @@
       <div class="playing">
         <p class="playing__player">
           <span class="playing__player--text">hraje:</span>
-          <img src="../obrazky/circle.svg" alt="kolečko" />
+          <img
+            class="player-symbol"
+            src="../obrazky/circle.svg"
+            alt="kolečko"
+          />
         </p>
 
         <div class="playing__controls">
@@ -32,12 +36,8 @@
       </div>
       <!--koncový div .playing__controls-->
       <section class="playing-board">
-        <button
-          class="playing-board__button playing-board__button--cross btn-1"
-        ></button
-        ><button
-          class="playing-board__button playing-board__button--circle btn-2"
-        ></button
+        <button class="playing-board__button"></button
+        ><button class="playing-board__button"></button
         ><button class="playing-board__button"></button
         ><button class="playing-board__button"></button
         ><button class="playing-board__button"></button
