--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           </p>
         </div>
       </div>
-      <button class="card__buttons card__button-rules">
-        <a
-          href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
-          class="button__link"
-          >Pravidla</a
-        >
-      </button>
-      <button class="card__buttons card__button-start">
-        <a href="hra/hra.html" class="button__link">Začít hrát</a>
-      </button>
+      <a
+        href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+        class="button__link card__buttons card__button-rules"
+        >Pravidla</a
+      >
+      <a
+        href="hra/hra.html"
+        class="button__link card__buttons card__button-start"
+        >Začít hrát</a
+      >
     </main>
   </body>
 </html>
